# vitalforge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/personas/: alex_rivera.yaml  jordan_kim.yaml
src/vitalforge/: __init__.py  cli.py  clinical.py  dataset.py  ids.py  output.py  personas.py  signals.py  trajectory.py
tests/: conftest.py  test_cli.py  test_determinism.py  test_output.py  test_personas.py  test_signals.py  test_trajectory.py
